xidlc/tests/invalid/http_stream_mutually_exclusive.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidMutuallyExclusiveStreamService {
    @server_stream
    @client_stream
    @stream_codec("ndjson")
    @post(path = "/events")
    string exchange(string payload);
};
